--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -25,17 +25,38 @@
                                     <size key="itemSize" width="90" height="90"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="2" minY="2" maxX="0.0" maxY="2"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UICollectionViewCell" id="t9F-7e-lwH">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="t9F-7e-lwH" customClass="PhotoCollectionViewCell" customModule="Photorama" customModuleProvider="target">
                                         <rect key="frame" x="2" y="2" width="90" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bMZ-Fv-RNp">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="Ngf-5K-CWq">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="bMZ-Fv-RNp" secondAttribute="trailing" id="5sv-OX-9nW"/>
+                                            <constraint firstItem="Ngf-5K-CWq" firstAttribute="centerX" secondItem="t9F-7e-lwH" secondAttribute="centerX" id="Bh0-vW-kU3"/>
+                                            <constraint firstItem="bMZ-Fv-RNp" firstAttribute="top" secondItem="t9F-7e-lwH" secondAttribute="top" id="Ws2-UD-cZh"/>
+                                            <constraint firstItem="Ngf-5K-CWq" firstAttribute="centerY" secondItem="t9F-7e-lwH" secondAttribute="centerY" id="dbI-L9-l4c"/>
+                                            <constraint firstAttribute="bottom" secondItem="bMZ-Fv-RNp" secondAttribute="bottom" id="rBB-2L-oPn"/>
+                                            <constraint firstItem="bMZ-Fv-RNp" firstAttribute="leading" secondItem="t9F-7e-lwH" secondAttribute="leading" id="rZn-3d-7EX"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="bMZ-Fv-RNp" id="wYC-kt-dCI"/>
+                                            <outlet property="loadingView" destination="Ngf-5K-CWq" id="rBB-2b-evg"/>
+                                            <segue destination="cVR-uu-Toz" kind="show" identifier="showPhoto" id="43m-tX-nbj"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -57,6 +78,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="829" y="666"/>
+        </scene>
+        <!--Photo Preview View Controller-->
+        <scene sceneID="7Xg-7j-K1H">
+            <objects>
+                <viewController id="cVR-uu-Toz" customClass="PhotoPreviewViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zco-YM-Y8Q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jGa-bi-HdW">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="yS5-5D-ap5" firstAttribute="bottom" secondItem="jGa-bi-HdW" secondAttribute="bottom" id="2hU-d8-WZ3"/>
+                            <constraint firstItem="yS5-5D-ap5" firstAttribute="trailing" secondItem="jGa-bi-HdW" secondAttribute="trailing" id="5ka-7G-Jw9"/>
+                            <constraint firstItem="jGa-bi-HdW" firstAttribute="leading" secondItem="yS5-5D-ap5" secondAttribute="leading" id="FSf-1d-hLo"/>
+                            <constraint firstItem="jGa-bi-HdW" firstAttribute="top" secondItem="yS5-5D-ap5" secondAttribute="top" id="Q2R-Lh-gvh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yS5-5D-ap5"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="jGa-bi-HdW" id="8ws-yJ-AOi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DEf-Dn-YbP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1606" y="666"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="A3T-S7-tJY">
